# stm32f4_hal

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_uc.txt  CMakePresets.json  toolchain.cmake
include/hal/: buffer.h  clock.h  cmsis.h  delay.h  dma.h  error.h  gpio.h  init.h  spi.h  timer.h  types.h  uart.h  util.h
src/: buffer.c  clock.c  delay.c  dma.c  gpio.c  init.c  spi.c  timer.c  uart.c  util.c
